--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	//testRuntimeOnly 'com.h2database:h2'
-	runtimeOnly 'com.h2database:h2'
+	testRuntimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
