feat: JWT Filter 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,7 @@ logging:
   level:
     root: INFO
 
+jwt:
+  secret: 3ec6.!wUFdyPeQoHq~KhG7=F/oS+z`WO_ihDKO;rR[,vW%hTatqs=AX`QCK.QD2
+  validity-in-milliseconds: 10800000
+
